[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/place_holder/props_itens/bomb_anim_f0.png" type="Texture" id=1]
[ext_resource path="res://assets/place_holder/effects (new)/hit_effect_anim_f1.png" type="Texture" id=2]
[ext_resource path="res://assets/place_holder/effects (new)/explosion_anim_spritesheet.png" type="Texture" id=3]
[ext_resource path="res://objects/projectiles/hot_ballz/hot_ballz.gd" type="Script" id=4]
[ext_resource path="res://objects/projectiles/hot_ballz/Area2D.gd" type="Script" id=5]
[ext_resource path="res://assets/sounds/boom.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/place_holder/light.png" type="Texture" id=7]

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 1
emission_sphere_radius = 4.82
flag_disable_z = true
spread = 179.32
gravity = Vector3( 0, -30, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 1, 0.686275, 0.196078, 1 )
color_ramp = SubResource( 3 )
hue_variation = 0.09
hue_variation_random = 0.66

[sub_resource type="CircleShape2D" id=4]
radius = 15.9073

[sub_resource type="CircleShape2D" id=5]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Particles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Sprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "explode"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Particles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Sprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("..")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}

[node name="HotBallz" type="Area2D"]
scale = Vector2( 2, 2 )
collision_layer = 8
collision_mask = 5
script = ExtResource( 4 )
knockback_strength = 500

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
amount = 30
process_material = SubResource( 1 )
texture = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.33484 )
scale = Vector2( 0.531081, 0.531081 )
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 1.33484 )
scale = Vector2( 0.531081, 0.531081 )
collision_layer = 8
collision_mask = 0
script = ExtResource( 5 )
damage = 20
knockback_strength = 300

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 4.84122, 4.84122 )
shape = SubResource( 5 )
disabled = true

[node name="Sprite" type="Sprite" parent="Area2D"]
visible = false
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
hframes = 7
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Area2D"]
anims/RESET = SubResource( 7 )
anims/explode = SubResource( 6 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 7 )
texture_scale = 0.2
color = Color( 0.968627, 0.760784, 0.145098, 1 )

[connection signal="area_entered" from="." to="." method="_on_HotBallz_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_HotBallz_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
